--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="header">Two letters better than MetaX</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="http://github.com/downloads/griff/metaz/MetaZ-1.0a12.zip">Download Latest</a></li>
+          <li class="download"><a class="buttons" href="http://github.com/downloads/griff/metaz/MetaZ-1.0a13.zip">Download Latest</a></li>
           <li><a class="buttons github" href="https://github.com/griff/metaz">View On GitHub</a></li>
         </ul>
 
@@ -41,6 +41,20 @@ reimplementation of MetaX with a few ideas of our own sprinkled in there.</p>
 <h1>Bugs / Feature request</h1>
 
 <p>For bugs and feature requests you can use our <a href="https://github.com/griff/metaz/issues">issue tracker at github</a></p>
+
+<h1>Extras</h1>
+
+<p>We have created some extra resources and small plugins that were deemed to small or
+    silly to be included with the main program.</p>
+    
+<p>The classic moo from MetaX is finally available via a small MetaZ plugin you can download from
+    <a href="https://github.com/downloads/griff/metaz/Moo.zip">here</a>. To install it
+    simply unpack the zip file and drop the unpacked script onto the MetaZ dock icon.</p>
+    
+<p>If you use <a href="http://www.latenightsw.com/">Script Debugger</a> from Late Night Software
+    you are in luck because we have created a Script Debugger template for MetaZ plugins which
+    illustrate the different types of events plugins can respond to. To get the template
+    <a href="https://github.com/downloads/griff/metaz/MetaZ%20Plugin.sdtemplate.zip">click here</a></p>
 
 <h1>Building</h1>
 
