--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="header">Two letters better than MetaX</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="http://github.com/downloads/griff/metaz/MetaZ-1.0a13.zip">Download Latest</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/griff/metaz/releases/download/v1.0a14/MetaZ-1.0a14.zip">Download Latest</a></li>
           <li><a class="buttons github" href="https://github.com/griff/metaz">View On GitHub</a></li>
         </ul>
 
